@startuml
title Darija Translator - Class Diagram

class TranslatorResource
class GroqTranslationService
class TranslationRequest
class TranslationResponse
class BasicAuthFilter
class TranslatorIdentityStore

TranslatorResource --> GroqTranslationService
TranslatorResource --> TranslationRequest
TranslatorResource --> TranslationResponse
BasicAuthFilter --> TranslatorIdentityStore

@enduml
